fix for delete article and logo

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -240,6 +240,12 @@ html, body {
   left: -170px;
   z-index: 100;
   pointer-events: none;
+  .logo-inner {
+    pointer-events: auto;
+    display: block;
+    height: 190px;
+    width: 270px;
+  }
 }
 label.vote {
   display: inline-block;
