--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 <body>
   <div class="body-bg"></div>
   <div class="container">
-    <div class="logo"></div>
+    <div class="logo">
+      <a href="/" class="logo-inner"></a>
+    </div>
     <div id="left-nav">
       <%= link_to "专题", features_path, class: "nav-link#{" active" if params[:controller]=="features"}" %>
       <% Category.all.each do |category| %>
