--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -11,7 +11,9 @@
 <body>
   <div class="body-bg"></div>
   <div class="user-container container">
-    <div class="logo"></div>
+    <div class="logo">
+      <a href="/" class="logo-inner"></a>
+    </div>
     
     <%= yield %>
 
