--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
     <div class="logo">
       <a href="/" class="logo-inner"></a>
     </div>
+    <% unless flash.empty? %>
+    <div class="flash" style="position: absolute;top: -2px;width: 620px;left: 185px;">
+      <% flash.each do |k,v| %>
+        <div class="alert alert-<%= k %>">
+          <%= v %>
+        </div>
+      <% end -%>
+    </div>
+    <% end -%>
     <div id="left-nav">
       <%= link_to "专题", features_path, class: "nav-link#{" active" if params[:controller]=="features"}" %>
       <% Category.all.each do |category| %>
@@ -22,11 +31,6 @@
       <%= link_to "投票", votes_path, class: "nav-link#{" active" if params[:controller]=="votes"}" %>
     </div>
     <div id="main">
-      <% flash.each do |k,v| %>
-        <div class="alert alert-<%= k %>">
-          <%= v %>
-        </div>
-      <% end -%>
       <%= yield %>
     </div>
   </div>
