fix js of users edit

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,7 +35,7 @@
 </div>
 
 <script>
-  $('#edit_user_test').submit(function(){
+  $('#right-panel form').submit(function(){
     hide_right_panel();
     setTimeout(function(){
       Turbolinks.visit(window.location)
