--- a/app/assets/stylesheets/votes.css.less
+++ b/app/assets/stylesheets/votes.css.less
@@ -18,3 +18,12 @@
     }
   }
 }
+
+.remove_fields, .add_fields {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+fieldset {
+  margin-bottom: 10px;
+}
