--- a/app/views/votes/_option_fields.html.erb
+++ b/app/views/votes/_option_fields.html.erb
@@ -1,5 +1,7 @@
 <fieldset>
-<%= f.text_field :content %>
-<%= f.hidden_field :_destroy %>
-<%= link_to "remove", '#', class: "remove_fields" %><br>
+  <%= f.text_field :content %>
+  <%= f.hidden_field :_destroy %>
+  <%= link_to '#', class: "remove_fields" do %>
+    <i class="icon-minus-sign"></i>
+  <% end -%>
 </fieldset>
