--- a/app/views/votes/edit.html.erb
+++ b/app/views/votes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing vote</h1>
+<h1>修改投票</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vote %> |
-<%= link_to 'Back', votes_path %>
+<%= link_to '返回', @vote %>
