--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -16,8 +16,25 @@
 //= require jquery.dropdown
 //= require jquery.tabs
 //= require kindeditor
+//= require select2
 //= require_self
 //= require_tree .
+
+
+function ajaxLoading() {
+  $('body').append('<div id="ajax-loading"><img class="loading" src="<%= asset_path("loading.gif") %>" width=64><div class="error"></div></div>');
+  $('#ajax-loading').click(function(){
+    $(this).remove();
+  })
+}
+function ajaxSuccess() {
+  $('#ajax-loading').remove();
+}
+function ajaxError() {
+  $('#ajax-loading .loading').delay(2000).hide().siblings('.error').fadeTo(40,1).fadeTo(60,0, function(){
+    $(this).parent().remove();
+  });
+}
 
 function hide_right_panel() {
   $('#user-bar').css("right",0);
@@ -60,6 +77,7 @@ $(document).on("page:change", function(){
     window.onload();
   }
 })
+  
 
 $('#left-nav a').click(function(){
   $("html,body").animate({scrollTop: 0}, 500);
@@ -71,8 +89,3 @@ $(window).scroll(function(){
   $('#left-nav').css("top",$(window).scrollTop()+230);
   $('#actions').css("top",$(window).scrollTop()+140);
 })
-
-
-
-
-
