--- a/app/views/features/edit.html.erb
+++ b/app/views/features/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing feature</h1>
+<h1>修改专题</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @feature %> |
-<%= link_to 'Back', features_path %>
