--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -265,10 +265,13 @@ label.vote {
   -webkit-font-smoothing: antialiased;
   
   a {
-    // color: white;
+    // color: #0AF;
   }
   a.link {
-    color: ;
+    color: #0AF;
+    &:hover {
+      color: darken(#0AF, 10%);
+    }
   }
 }
 
