--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -31,7 +31,7 @@
       <div class="center gray"><%= current_user.is_who %></div>
       <a id="right-bar-link-1" href="/" class="center gray mt30"><i class="icon-home icon-2x p0"></i><br>主页</a>
       <% if current_user.is_reporter? %>
-      <a id="right-bar-link-2" href="<%= current_user.articles.empty? ? new_article_path : user_publishes_path %>" class="center gray mt30"><i class="icon-pencil icon-2x p0"></i><br>发布</a>
+      <a id="right-bar-link-2" href="<%= current_user.articles.unscoped.empty? ? new_article_path : user_publishes_path %>" class="center gray mt30"><i class="icon-pencil icon-2x p0"></i><br>发布</a>
       <% else %>
       <a id="right-bar-link-2" href="<%= new_article_path %>" class="center gray mt30"><i class="icon-edit icon-2x p0"></i><br>投稿</a>
       <% end -%>
