--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -47,6 +47,7 @@ $('#right-bar-link-2[href*="my"],#right-bar-link-3,#right-bar-link-4').click(fun
   $ub = $('#user-bar');
   url = $(this).attr("href");
   url = url.match(/\?/) ? url+"&raw=true" : url+"?raw=true";
+  $ub.css("right",500);
   $rp.load(url, function(){
     $ub.css("right",$rp.width());
     $("body").click(function(e){
@@ -77,10 +78,13 @@ $(document).on("page:change", function(){
     window.onload();
   }
 })
+
+$(document).on("page:fetch", function(){
+  $("html,body").animate({scrollTop: 0}, 500);
+})
   
 
 $('#left-nav a').click(function(){
-  $("html,body").animate({scrollTop: 0}, 500);
   $(this).siblings().removeClass("active");
   $(this).addClass("active");
 })
