--- a/app/assets/stylesheets/todc-bootstrap/variables.less
+++ b/app/assets/stylesheets/todc-bootstrap/variables.less
@@ -44,7 +44,7 @@
 
 // Typography
 // -------------------------
-@sansFontFamily:        Arial, Helvetica, sans-serif;
+@sansFontFamily:        "Helvetica Neue", Helvetica, Tahoma, STHeiti, "Microsoft YaHei", sans-serif;
 @serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
 
