--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="tri ml100 hov">
   <%= form_for [commentable, @comment] do |f| %>
-    <%= f.text_area :content, style: "width: 488px;", rows: 3, placeholder: "输入评论，按 Enter 提交" %>
+    <%= f.text_area :content, style: "width: 488px;", rows: 3, placeholder: "输入评论，按 Ctrl + Enter 提交" %>
     <%= f.submit "评论", class: "invisible" %>
   <% end -%>
 </div>
@@ -85,7 +85,7 @@
       </div>
       <div class="hov ml100 tri">
         <%= form_for @subcomment, url: eval("#{commentable.class.to_s.downcase}_subcomments_path(commentable, comment)") do |f| %>
-        <%= f.text_area :content, style: "width: 388px;", rows: 3, placeholder: "输入评论，按 Enter 提交" %>
+        <%= f.text_area :content, style: "width: 388px;", rows: 3, placeholder: "输入评论，按 Ctrl + Enter 提交" %>
         <%= f.submit "评论", class: "invisible" %>
         <% end -%>
       </div>
@@ -97,7 +97,7 @@
 <% content_for :script do %>
   <script>
     $('textarea').keydown(function (e) {
-      if (e.keyCode == 13) {
+      if ( (e.metaKey || e.ctrlKey) && e.keyCode == 13) {
         $(this).closest("form").submit();
         setTimeout(function(){
           Turbolinks.visit(window.location)
