--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -48,7 +48,7 @@ html, body {
   height: 100%;
   width: 100%;
   z-index: 0;
-  background-image: url(/assets/background_image.jpg);
+  background-image: url(/uploads/background.jpg);
   .background-size(cover);
 }
 
