--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag feature.poster, style: "width: 150px" %>
   </div>
   <div style="margin-left: 170px;">
-    <h4 style="font-size: 18px; font-weight: bold; color: #333;">
+    <h4 style="font-size: 18px; font-weight: bold; color: #333; margin-top: 0;">
       <%= link_to feature.title, feature %>
     </h4>
     <p>
