--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,6 +8,9 @@
     <div class="controls">
       <%= setting.file_field :background %>
     </div>
+    <div class="controls mt10">
+      请尽量上传 JPG 格式的图片，且大小不要超过 100KB
+    </div>
   </div>
   <% end -%>
 
