--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -12,19 +12,38 @@
 </div>
 
 <% @votes.recent.each do |vote| %>
-  <div class="vote-block">
+  <div class="vote-block clearfix">
   <h3 class="m0"><%= link_to vote.title, vote %></h3>
+  <% if vote.voters.include? current_user %>
+  <table>
+    <% vote.options.each do |opt| %>
+    <tr>
+      <td style="padding: 5px; width: 130px;"><%= opt.content %></td>
+      <td style="padding: 5px; width: 180px;">  
+        <div class="progress progress-warning" style="margin: 0px;">
+          <div class="bar" style="width: <%= (opt.count * 100.0 / vote.voters.count).to_s + "%" %>">
+          </div>
+        </div>
+      </td>
+    </tr>
+    <% end -%>
+  </table>
+  <%= link_to "查看详情", vote, class: "btn btn-success pull-right", style: "margin-top: 10px;" %>
+  <% else %>
   <%= form_tag vote_options_path(vote), method: :post do %>
-    <div class="mb20">
+    <div>
       <% vote.options.each do |opt| %>
         <div class="mt10">
           <%= radio_button_tag "option", opt.id %> <%= label_tag "option_" + opt.id, opt.content , class: "vote" %>
         </div>
       <% end -%>
     </div>
-    <%= link_to "查看结果", vote, class: "btn btn-success" %>
-    <%= submit_tag "投票", class: "btn btn-danger" %>
+    <div class="pull-right mt10">
+      <%= submit_tag "投票", class: "btn btn-danger" %>
+      <%= link_to "查看结果", vote, class: "btn btn-success" %>
+    </div>
   <% end %>
+  <% end -%>
   </div>
 <% end -%>
 
