--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -260,6 +260,7 @@ label.vote {
   position: absolute;
   padding-right: 1000px;
   color: white;
+  background-color: #000;
   background-color: rgba(0, 0, 0, 0.9);
   overflow-y: auto;
   -webkit-font-smoothing: antialiased;
